tests/semantic/invalid/45_e_base_args_type.hulk
type Person(name:String) {}
type Student(name:Number ) inherits Person(name) {}
print(0);
